# CMLIS

./: .gitignore  AGENTS.md  BRIEF.md  CLAUDE.md  HARDWARE_TOPOLOGY.md  INSTALL.md  METHODOLOGY.md  MODEL.md  MVP.md  PRODUCTION_TASKS.md  README.md  SPEC.md
.claude/: settings.local.json
.claude/agents/: architect.md  code-reviewer.md  developer-draft.md  developer-verify.md  developer.md  orchestrator.md  planner-draft.md  planner-verify.md  planner.md  researcher.md  tester-draft.md  tester-verify.md  tester.md  ui-designer.md
.github/workflows/: ci.yml
poc/: Makefile  README.md  pyproject.toml
poc/cmlis/: __init__.py  bench.py  cli.py  engine.py  memctl.py  ppl.py  router.py  telemetry.py  topology.py
poc/cmlis_poc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
poc/configs/: mixtral-dual-socket.json
poc/reports/: cmlis-bench-20260419-094750.json
poc/tests/: test_bench.py  test_engine.py  test_memctl.py  test_ppl.py  test_router.py  test_telemetry.py  test_topology.py
scripts/: setup_llama.sh
