[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmlis-poc"
version = "0.1.0"
description = "CMLIS PoC: memory-aware CPU LLM inference orchestrator"
requires-python = ">=3.10"
dependencies = [
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "scipy>=1.10",
]

[project.scripts]
cmlis = "cmlis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cmlis*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
